# QKD_Resource_Allocation

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: six_node.yaml
results/: sample_run.json
scripts/: __init__.py  generate_sample_results.py  run_demo.py
src/qkd_odcn/: __init__.py  allocation.py  bb84.py  cli.py  config.py  connection_request.py  hamming.py  metrics.py  plotting.py  topology.py
tests/: test_allocation.py  test_config_validation.py  test_connection_request.py  test_generate_sample_results.py  test_hamming.py  test_metrics.py
