[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qkd-odcn-resource-allocation"
version = "0.1.0"
description = "Research code for QKD-enabled ODCN resource-allocation simulations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Shivansh Malviya" }
]
keywords = ["quantum-key-distribution", "qkd", "optical-networks", "resource-allocation", "research-code"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "numpy",
  "networkx",
  "matplotlib",
  "pyyaml",
  "tqdm"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "nbformat"
]

[project.scripts]
qkd-odcn-demo = "qkd_odcn.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"
